# parl_register_interests

./: .gitignore  Dockerfile  Dockerfile.dev  docker-compose.yml  pyproject.toml  readme.md
.devcontainer/: devcontainer.json
.github/actions/cached-build/: action.yml
.github/workflows/: build_and_publish.yml
data/data_packages/all_registers_database/: categories.resource.yaml  datapackage.yaml  detail_desc.resource.yaml  details.resource.yaml  entries.resource.yaml
data/data_packages/all_time_register/: datapackage.yaml  register_of_interests.resource.yaml
data/data_packages/commons_rmfi/: category_1.1.parquet  category_1.1.resource.yaml  category_1.2.parquet  category_1.2.resource.yaml  category_1.parquet  category_1.resource.yaml  category_10.parquet  category_10.resource.yaml  category_2.parquet  category_2.resource.yaml  category_3.parquet  category_3.resource.yaml  category_4.parquet  category_4.resource.yaml  category_5.parquet  category_5.resource.yaml  category_6.parquet  category_6.resource.yaml  category_7.parquet  category_7.resource.yaml  category_8.parquet  category_8.resource.yaml  category_9.parquet  category_9.resource.yaml  datapackage.yaml  overall.parquet  overall.resource.yaml
data/data_packages/latest_register/: datapackage.yaml  register_of_interests.parquet  register_of_interests.resource.yaml
data/data_packages/northern_ireland_assembly_register_of_interests/: datapackage.yaml  entries.resource.yaml
data/data_packages/parliament_2019/: datapackage.yaml  register_of_interests.parquet  register_of_interests.resource.yaml
data/interim/: money_cache.json  nlp.cache.parquet  org_cache.json  regmem.json
data/raw/: regmem2022-05-16.xml
docs/: _config.yml  index.md
docs/_datasets/: regmem.md
docs/_datasets/all_time_register/: 0.md  (+7 more)
docs/_downloads/: regmem-processed-regmem.md  regmem-xlsx.md
docs/_versionlists/: all_time_register.md  latest_register.md  regmem.md
docs/sass/: _header.scss
notebooks/: devolved_parl.ipynb  npl.ipynb  process_xml.ipynb  test.ipynb
script/: setup
src/parl_register_experiment/: __main__.py  download.py  process.py
src/parl_register_interests/: __main__.py  download.py  official_data.py  process.py  universal_processing.py  validate.py
tests/: test_database.py  test_parl_register_experiment.py
(+266 files in other folders)
