[tool.poetry]
name = "parl_register_experiment"
version = "0.1.0"
description = "Proof of concept of applying NLP to register"
authors = []

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
data_common = { path = "src/data_common/", develop = true }
spacy = "^3.3.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"

[tool.poetry.scripts]
notebook = 'parl_register_experiment.cli:main'
dataset = "data_common.dataset.__main__:run"

[tool.pyright]
include = ["src", "notebooks"]
exclude=["src/data_common/typings"]
stubPath="src/data_common/typings"
typeCheckingMode="basic"


[notebook.settings]
default_page_title = "Settings file defined title"

[tool.dataset]
dataset_dir = "data/data_packages"
publish_dir = "docs/"
publish_url = "https://mysociety.github.io/parl_register_experiment/datasets/"
credit_text = "If you find this data useful, please let us know to help us make the case for future funding."
credit_url = "https://survey.alchemer.com/s3/6876792/Data-usage"